--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
 
     <input type="text" id="textInput" placeholder="Name">
     <input type="text" id="phoneInput" placeholder="Phone Number">
-
+    <h2>Test</h2>
 
     <button id="submitButton">Enter</button>
 
