--- a/main.html
+++ b/main.html
@@ -13,11 +13,10 @@
 
     <input type="text" id="textInput" placeholder="Name">
     <input type="text" id="phoneInput" placeholder="Phone Number">
-    <h2>Test</h2>
 
     <button id="submitButton">Enter</button>
 
-    <p id="message">Message to Appear</p>
+    <p id="message"></p>
 
 
 </body>
